@@ -202,6 +202,9 @@ Other Changes
 * SOLR-7710: Replace async occurrences with CommonAdminParams.ASYNC
   (Christine Poerschke, Ramkumar Aiyengar)
 
+* SOLR-7712: fixed test to account for aggregate floating point precision loss (hossman)
+
+
 ==================  5.2.1 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
